--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
         "dev": "vite",
         "compile:js": "vite build",
         "preview": "vite preview",
-        "style:fix": "npm run eslint --fix src && npm run prettier --log-level warn --ignore-unknown --write ./*",
-        "test:lint": "jest -c ../../node_modules/@solana/test-config/jest-lint.config.ts --rootDir . --silent --testMatch '<rootDir>src/**/*.{ts,tsx}'",
-        "test:prettier": "jest -c ../../node_modules/@solana/test-config/jest-prettier.config.ts --rootDir . --silent",
-        "test:typecheck": "tsc"
+        "test:typecheck": "tsc",
+        "format": "npx prettier --write \"**/*.{js,jsx,ts,tsx,json}\""
     },
     "dependencies": {
         "@radix-ui/react-dropdown-menu": "2.1.6",
@@ -33,6 +31,7 @@
         "@vitejs/plugin-react-swc": "^3.8.1",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "prettier": "^3.2.5",
         "vite": "^6.2.6"
     }
 }
